<resources>
    <string name="app_name">Privastead</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Privastead Camera</string>
    <string name="nav_header_subtitle">Security with privacy!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_camera">Cameras</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_slideshow">Account</string>

    <!-- Add Camera -->
    <string name="add_instructions">Note: Make sure the smartphone is connected to the same WiFi network as the camera hub.</string>
    <string name="add_button_text">Add Camera</string>
    <string name="add_failed">Failed to add the camera!</string>
    <string name="camera_add_button_description">Add a camera</string>
    <string name="camera_name_hint">Camera name</string>
    <string name="camera_name_exists">Camera name already exists! Choose a different one.</string>
    <string name="enter_camera_name">Enter a name for the camera!</string>
    <string name="camera_ip_hint">Camera hub IP address</string>
    <string name="enter_camera_ip">Enter the IP address of the camera!</string>
    <string name="scan_qr_code_text">Scan QR code</string>
    <string name="qr_not_scanned">QR code: Not scanned!</string>
    <string name="qr_scanned">QR code: Scanned!</string>
    <string name="qr_not_scanned_toast">"Scan camera's QR code first!"</string>
    <string name="intent_extra_camera_name">CameraName</string>
    <string name="intent_extra_barcode">barcode</string>
    <string name="permission_not_granted">Permission not granted!</string>
    <string name="wait_for_add">Working on adding the camera. Please wait!</string>
    <string name="camera_name_no_space">Camera name cannot contain a space!</string>
    <string name="select_camera_type_instructions">Choose the camera type to add</string>
    <string name="standalone_camera_button_text">Privastead camera</string>
    <string name="ip_camera_button_text">IP camera via Privastead hub</string>
    <string name="camera_type_standalone">CameraTypeStandalone</string>
    <string name="wifi_ssid_hint">WiFi SSID (for camera to connect to)</string>
    <string name="wifi_password_hint">WiFi password</string>
    <string name="enter_wifi_ssid">Enter the SSID of the WiFi network you want the camera to connect to!</string>
    <string name="enter_wifi_password">Enter the password of the WiFi network you want the camera to connect to!</string>
    <string name="hotspot_activity_instructions">We need to connect to the camera. To do so, we need to connect to the WiFi hotspot that the camera creates. Make sure the camera is plugged in and ready.</string>
    <string name="hotspot_not_connected">Status: Not connected to the camera hotspot</string>
    <string name="hotspot_connected">Status: Connected to the camera hotspot</string>
    <string name="connect_hotspot_text">Connect</string>
    <string name="connect_hotspot_instructions">This will take you to the system\'s WiFi settings page. Please connect to Privastead WiFi hotspot. Password is 12345678. Also, please disconnect mobile/cellular network.</string>
    <string name="next_text">Next</string>
    <string name="internet_activity_instructions">The last step in adding a camera requires Internet access. Make sure you are connected to Internet (WiFi or mobile network) and then press Finish.</string>
    <string name="finish_text">Finish</string>
    <string name="add_failed_no_internet">Failed to connect to the server. Make sure your phone is connected to the Internet!</string>
    <string name="not_connected_to_hotspot">It seems like the phone is not connected to the camera hotspot!</string>

    <!-- Camera List -->
    <string name="camera_instructions">Click on a camera to see the list of its videos. Long press to remove the camera and delete all its videos."</string>
    <string name="delete_camera_videos_confirmation_text">This will delete the camera and all its videos. Are you sure you want to proceed?</string>

    <!-- Video List -->
    <string name="video_instructions">Click on a video to play. Long press to delete.</string>
    <string name="livestream_button">Livestream</string>
    <string name="delete_all_button">Delete all</string>
    <string name="delete_confirmation_text">Are you sure you want to delete the video?</string>
    <string name="delete_pending_confirmation_text">Are you sure you want to delete this pending video placeholder? Even if you do, the video will show up in the list once it is fully downloaded.</string>
    <string name="delete_failed">Could not successfully delete the video from storage!</string>
    <string name="delete_all_confirmation_text">This will delete all the videos of this camera. Are you sure you want to proceed?</string>
    <string name="error_camera_access">Error accessing the camera data!</string>
    <string name="delete_all_failed">Could not successfully delete all the videos from storage!</string>
    <string name="wait_pending_video">This video has not been fully received yet. Please wait.</string>
    <string name="wifi_instructions">Currently, videos will be fetched only when connected to WiFi (but not mobile network). You can remove this restriction in the settings.</string>

    <!-- Notification -->
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notification of new videos</string>
    <string name="channel_id">Video</string>
    <string name="foreground_service_channel_name">Download Notification Channel</string>
    <string name="foreground_service_channel_description">Notification for download</string>
    <string name="foreground_service_channel_id">ForegroundService</string>
    <string name="notification_switch">Notifications</string>
    <string name="saved_need_notification_state">NotificationState</string>

    <!-- Settings -->
    <string name="theme_switch">Night Theme</string>
    <string name="saved_theme_switch_state">ThemeState</string>
    <string name="update_ip">Update server info</string>
    <string name="use_mobile_state">UseMobile</string>
    <string name="mobile_network_switch">Use mobile network</string>
    <string name="mobile_network_next_step_instructions">This will take you to the system\'s mobile data usage page for the app. To allow the app to fetch videos instantly when connected to a mobile network, enable both "Background data" and "Unrestricted mobile data usage" options.</string>

    <!-- Network Connection -->
    <string name="first_time_connection_done">FirstTimeConnectionDone</string>
    <string name="not_connected_server">Not connected to the server!</string>
    <string name="try_again">Try again later!</string>
    <string name="ip_not_set">(not set)</string>
    <string name="invalid_ip">Invalid IP address!</string>
    <string name="enter_server_ip">Enter the server IP address!</string>
    <string name="ip_hint">Server IP address</string>
    <string name="saved_ip">SavedIP</string>
    <string name="server_instructions">This app receives encrypted videos from your camera through an untrusted server. Please provide the server IP address and the credentials to access the server using a QR code.</string>
    <string name="save_button_text">Save</string>
    <string name="server_qr_not_scanned_toast">"Scan server's QR code first!"</string>
    <string name="server_qr_not_valid">"Invalid server QR code!"</string>
    <string name="server_username">ServerUsername</string>
    <string name="server_password">ServerPassword</string>
    <string name="camera_set">CameraSet</string>

    <!-- Shared Preferences -->
    <string name="shared_preferences">SharedPreferences</string>

    <!-- Rust Native -->
    <string name="rust_native_initialized">RustNativeInitialized</string>
    <string name="error_create_dir">"Error: Failed to create directory for camera"</string>

    <!-- FCM Token -->
    <string name="fcm_token">FCMToken</string>
    <string name="need_update_fcm_token">NeedUpdateFCMToken</string>

    <!-- Video player -->
    <string name="save_video_text">Download</string>
    <string name="video_downloaded">Video download successful!</string>
    <string name="downloading_motion_videos">DownloadingMotionVideos</string>
    <string name="download_confirmation_text">This will save the video to your gallery. Are you sure you want to proceed?</string>

    <!-- Worker -->
    <string name="camera_name_key">CameraNameKey</string>
    <string name="error_unexpected_camera_name">Error: Unexpected camera name.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>