<?xml version="1.0" encoding="utf-8"?>
<!--Based on https://github.com/android/codelab-android-room-with-a-view -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/add_instructions"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_camera_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/camera_name_hint"
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_camera_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="172dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/camera_ip_hint"
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_wifi_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/wifi_ssid_hint"
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_wifi_password_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_wifi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/wifi_password_hint"
            android:inputType="textPassword"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/qr_scan_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="@string/qr_not_scanned"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:text="@string/scan_qr_code_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:text="@string/add_button_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>